--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,33 +1,50 @@
-# Please see the documentation for all configuration options:
-# https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
+# https://docs.github.com/en/code-security/dependabot/working-with-dependabot/dependabot-options-reference
 version: 2
 
 updates:
   - package-ecosystem: 'github-actions'
     open-pull-requests-limit: 1
+    multi-ecosystem-groups: updates
+    patterns: ['*']
     directory: '/'
-    schedule:
-      day: 'sunday'
-      interval: 'weekly'
     groups:
-      github-actions:
+      security:
         patterns: ['*']
+        applies-to: security-updates
+
+  - package-ecosystem: 'bun'
+    open-pull-requests-limit: 1
+    multi-ecosystem-groups: updates
+    directory: '/'
+    groups:
+      security:
+        patterns: ['*']
+        applies-to: security-updates
 
   - package-ecosystem: 'gomod'
     open-pull-requests-limit: 1
-    directory: '/'
+    multi-ecosystem-groups: updates
+    directories: ['**/*']
+    patterns: ['*']
+    groups:
+      security:
+        applies-to: security-updates
+        patterns: ['*']
+
+  - package-ecosystem: 'helm'
+    open-pull-requests-limit: 1
+    multi-ecosystem-groups: updates
+    directories: ['**/*']
+    patterns: ['*']
+    groups:
+      security:
+        applies-to: security-updates
+        patterns: ['*']
+
+multi-ecosystem-groups:
+  updates:
     schedule:
       day: 'sunday'
       interval: 'weekly'
-    groups:
-      gomod-security:
-        applies-to: security-updates
-        update-types: ['minor', 'patch']
-        patterns: ['*']
-      gomod-update:
-        applies-to: version-updates
-        update-types: ['minor', 'patch']
-        patterns: ['*']
-    ignore:
-      - dependency-name: "*"
-        update-types: ["version-update:semver-major"]
+    commit-message:
+      prefix: 'deps'
