--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,11 +25,8 @@ jobs:
 
       - uses: actions/setup-go@v6
         with:
-          go-version-file: 'go.mod'
-
-      - uses: gotesttools/gotestfmt-action@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          check-latest: true
+          go-version-file: go.mod
 
       - uses: golangci/golangci-lint-action@v8
         with:
