--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,9 @@ updates:
       day: sunday
       interval: weekly
       timezone: Europe/Berlin
+    groups:
+      github-actions:
+        patterns: [ '*' ]
     cooldown:
       default-days: 1
       include: [ '*' ]
